--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
 <body>
   <div class="widget-container">
     <button class="buy-button"><b>BUY Z METAMASK</b></button>
-    <div class="quantity-label">
-      Quantité (BNB) :
+    <div class="quantiTY-label">
+      QUANTITY (BNB) :
     </div>
     <div class="quantity-value">
       0.0000
