--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
   <div class="widget-container">
     <button class="buy-button"><b>BUY Z METAMASK</b></button>
     <div class="quantiTY-label">
-      QUANTITY (BNB) :
+      QUANTITE (BNB) :
     </div>
     <div class="quantity-value">
       0.0000
